test(api): stabilize refactor test suite